gce/manifests/gce-example-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gce-example
  labels:
    app: gce-example
spec:
  template:
    metadata:
      labels:
        app: gce-example
        tier: web
    spec:
      containers:
      - name: gce-example
        image: gcr.io/nst-gobasic-service/gce-example:1.0
        ports:
        - containerPort: 8080
