gce/manifests/gce-example-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: gce-example
  labels:
    app: gce-example
spec:
  selector:
    app: gce-example
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
