gce/manifests/gce-example-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gce-example
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gce-example-ip
  labels:
    app: gce-example
spec:
  backend:
    serviceName: gce-example-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gce-example-backend
  labels:
    app: gce-example
spec:
  type: NodePort
  selector:
    app: gce-example
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
